# flower_classifier

./: README.md  app.py  client.py  pyproject.toml  readme.md  requirements.txt
flower_classifier/: train_models.py
models/: kneighborsmodel.pck  logisticregressionmodel.pck  randomforestmodel.pck  svcmodel.pck
static/css/: style.css
templates/: index.html
