[tool.poetry]
name = "flower-classifier"
version = "0.1.0"
description = ""
authors = ["sud0cs <asintessintes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyright = "^1.1.342"
scikit-learn = "^1.3.2"
flask = "^3.0.0"
wtforms = "^3.1.1"
requests = "^2.31.0"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
